--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,12 @@ body{
 p{
    margin-top: 10px; 
 }
+thead th {
+    background: #88CCF1;
+    color: #FFF;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    font-weight: 100;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+  }
